# honk-handel-analytiek

./: .gitignore  Makefile  README.md  example.env  pyproject.toml
honk-handel-tracker/: __main__.py  database.py  house.py
honk-handel-tracker/housedetail/: __init__.py  transform.py
honk-handel-tracker/houselist/: __init__.py  extract.py  transform.py
housetrack/: __main__.py  database.py  extract.py  house.py  load.py  transform.py
housetrack/housedetail/: __init__.py  extract.py  load.py  transform.py
housetrack/houselist/: __init__.py  extract.py  load.py  transform.py
move_nl_house_listing_tracker/: __main__.py  database.py  house.py
move_nl_house_listing_tracker/houselist/: load.py
